Anonymous | Login | 2021-01-23 09:43 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030612 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-03-27 22:42 | 2019-04-14 15:43 | ||||
Reporter | kgv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | feature | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030612: Visualization - provide texture map with video as image source | ||||||||
Description | TKService provides a tool for recording video, but doesn't provide interface for mapping video onto texture. | ||||||||
Steps To Reproduce | pload MODELING VISUALIZATION vclear vinit View1 vrenderparams -perfCounters fps box b 1 2 3 vdisplay -dispMode 1 b vfit vanimation anim -clear proc drawFrame {thePts} { uplevel #0 vtexture b -video Video.mkv } vanimation anim/cmd1 -start 0 -dur 100.0 -cmd "drawFrame %pts" vanimation anim -play | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0083271) git (administrator) 2019-03-28 01:03 |
Branch CR30612 has been created by kgv. SHA-1: ef239c567c959e7cb2e31144873498d2c8a4e140 Detailed log of new commits: Author: kgv Date: Thu Mar 28 00:57:17 2019 +0300 0030612: Visualization - provide texture map with video as image source Introduced package Media wrapping FFmpeg structures. Media_PlayerContext class manages video decoding into Media_IFrameQueue interface. Graphic3d_MediaTextureSet implements Media_IFrameQueue interface and can be used as texture source. AIS_MediaPlayer implements simple AIS object displaying video. |
(0083272) git (administrator) 2019-03-28 01:48 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: f62684eec6e698956e9be2a8c700e44350e1bf99 |
(0083273) git (administrator) 2019-03-28 02:03 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: 372e9e5512d6cef606d9f891978c50de7cb78d39 |
(0083274) git (administrator) 2019-03-28 07:42 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: 82e9e071897506d44e4ce296dabb6e39bfebd167 |
(0083276) git (administrator) 2019-03-28 07:49 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: 5ffd18c545c88fa3e08ce8f65d6e2bd7365d3968 |
(0083283) git (administrator) 2019-03-28 18:42 |
Branch CR30612 has been updated by kgv. SHA-1: 388afcb1e0f21bab013b78d51f3600654861a42c Detailed log of new commits: Author: kgv Date: Thu Mar 28 18:36:54 2019 +0300 0030619: Draw Harness, ViewerTest - add continuous rendering option to vrepaint command |
(0083284) git (administrator) 2019-03-28 18:52 |
Branch CR30612 has been updated by kgv. SHA-1: 5d4818b5625a33ccffde41a0ad463289a6705672 Detailed log of new commits: Author: kgv Date: Thu Mar 28 18:47:00 2019 +0300 # corrections |
(0083314) git (administrator) 2019-03-30 15:50 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: 909e4690cee85473c03fd1dd0f829a1da396821a |
(0083316) git (administrator) 2019-03-30 16:28 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: c2331768cc51e7055b6fd8ae50c8e7e9e76481ab |
(0083317) git (administrator) 2019-03-30 16:29 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: 6dd88463a3fb0908457d72ec9da7cdbd6d5ce0eb |
(0083318) git (administrator) 2019-03-30 17:05 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: b5d8f0808d28a04763382223a5ef6c41a342b1da |
(0083321) kgv (developer) 2019-03-30 20:08 edited on: 2019-04-01 01:34 |
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30612-CR30612-KGV/ [^] |
(0083427) osa (developer) 2019-04-05 10:39 |
Reviewed without remarks |
(0083429) apn (administrator) 2019-04-05 12:02 |
Combination - OCCT branch : CR30612 master SHA - b5d8f0808d28a04763382223a5ef6c41a342b1da d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : CR30612 SHA - ec5b6b0d6c62ba6acfe777671cfb5b4197b07da2 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16560.720000000027 / 16549.040000000037 [+0.07%] Products Total CPU difference: 10479.730000000041 / 9115.580000000047 [+14.97%] Windows-64-VC14: OCCT Total CPU difference: 17968.9375 / 17926.078125 [+0.24%] Products Total CPU difference: 12026.71875 / 10583.1875 [+13.64%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0083467) apn (administrator) 2019-04-08 01:00 edited on: 2019-04-08 01:01 |
There are following compilation errors on CentOS64-64 (gcc 4.4.7): http://jenkins-test-08.nnov.opencascade.com/view/IR-2019-04-05_IR-2019-04-05/view/OCCT%20compile/job/IR-2019-04-05_IR-2019-04-05-OCCT-CentOS64-64-opt-compile/1/parsed_console/ [^] /IR-2019-04-05_IR-2019-04-05/CentOS64-64-opt/OCCT/src/Media/Media_CodecContext.cxx:28: /dn29/PRODUCTS/maintenance/opencascade-6.7.1/CentOS64-64/ffmpeg-3.1/include/libavutil/common.h:30:2: error: #error missing -D__STDC_CONSTANT_MACROS / #define __STDC_CONSTANT_MACROS /IR-2019-04-05_IR-2019-04-05/CentOS64-64-opt/OCCT/src/Media/Media_CodecContext.cxx:28: /dn29/PRODUCTS/maintenance/opencascade-6.7.1/CentOS64-64/ffmpeg-3.1/include/libavutil/common.h: In function ‘int32_t av_clipl_int32_c(int64_t)’: /dn29/PRODUCTS/maintenance/opencascade-6.7.1/CentOS64-64/ffmpeg-3.1/include/libavutil/common.h:205: error: ‘UINT64_C’ was not declared in this scope /IR-2019-04-05_IR-2019-04-05/CentOS64-64-opt/OCCT/src/Media/Media_CodecContext.cxx: In member function ‘bool Media_CodecContext::ReceiveFrame(const opencascade::handle<Media_Frame>&)’: /dn54/builds/IR-2019-04-05_IR-2019-04-05/CentOS64-64-opt/OCCT/src/Media/Media_CodecContext.cxx:265: error: ‘UINT64_C’ was not declared in this scope Windows-32-vc14-uwp, Windows-64-vc14-uwp: http://jenkins-test-08.nnov.opencascade.com/view/IR-2019-04-05_IR-2019-04-05/view/OCCT%20compile/job/IR-2019-04-05_IR-2019-04-05-OCCT-Windows-32-VC14-uwp-opt-compile/1/parsed_console/ [^] \IR-2019-04-05_IR-2019-04-05\Windows-32-VC14-uwp-opt\OCCT\src\Media\Media_PlayerContext.cxx(71): error C2065: 'TIMECAPS': undeclared identifier ... \IR-2019-04-05_IR-2019-04-05\Windows-32-VC14-uwp-opt\OCCT\src\Media\Media_PlayerContext.cxx(72): error C3861: 'timeGetDevCaps': identifier not found |
(0083471) git (administrator) 2019-04-08 10:13 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: 24765cd77ef366a059421d1f58db8154738b2eb9 |
(0083473) kgv (developer) 2019-04-08 10:46 |
Please re-check compilation of corrected patch on mentioned platforms. |
(0083559) apn (administrator) 2019-04-09 12:31 edited on: 2019-04-09 12:32 |
There is following warning on CentOS64-64-opt: http://jenkins-test-08.nnov.opencascade.com/view/IR-WEEK15_IR-WEEK15/view/OCCT%20compile/job/IR-WEEK15_IR-WEEK15-OCCT-CentOS64-64-opt-compile/1/warningsResult/ [^] Media_FormatContext.cxx:413, GNU C Compiler 4 (gcc), Priority: Normal ‘AVStream::codec’ is deprecated (declared at /dn29/PRODUCTS/maintenance/opencascade-6.7.1/CentOS64-64/ffmpeg-3.1/include/libavformat/avformat.h:880) There are following compile errors on Windows-32-VC9-opt and Windows-64-VC9-opt: http://jenkins-test-08.nnov.opencascade.com/view/IR-WEEK15_IR-WEEK15/view/OCCT%20compile/job/IR-WEEK15_IR-WEEK15-OCCT-Windows-32-VC9-opt-compile/1/parsed_console/ [^] C:\builds\IR-WEEK15_IR-WEEK15\Windows-32-VC9-opt\OCCT\src\Media\Media_FormatContext.cxx(134) : error C2027: use of undefined type 'AVRational' C:\builds\IR-WEEK15_IR-WEEK15\Windows-32-VC9-opt\OCCT\src\Media\Media_CodecContext.cxx(157) : error C2027: use of undefined type 'AVStream' |
(0083568) git (administrator) 2019-04-09 13:27 |
Branch CR30612 has been updated forcibly by kgv. SHA-1: ff878f284e290a977b0bb75c413f77cc8497c3b8 |
(0083569) kgv (developer) 2019-04-09 13:29 |
> There are following compile errors on Windows-32-VC9-opt and Windows-64-VC9-opt: Please recheck updated branch on these compilers. > There is following warning on CentOS64-64-opt: It is expected, since Standard_DISABLE_DEPRECATION_WARNINGS is not implemented for this old compiler. |
(0083713) git (administrator) 2019-04-14 15:41 |
Branch CR30612 has been deleted by inv. SHA-1: ff878f284e290a977b0bb75c413f77cc8497c3b8 |
![]() |
|||
occt: master 98e6c6d1
Timestamp: 2019-03-27 21:57:17 Author: kgv Committer: apn [ Details ] [ Diff ] |
0030612: Visualization - provide texture map with video as image source Introduced package Media wrapping FFmpeg structures. Media_PlayerContext class manages video decoding into Media_IFrameQueue interface. Graphic3d_MediaTextureSet implements Media_IFrameQueue interface and can be used as texture source. AIS_MediaPlayer implements simple AIS object displaying video. |
||
mod - adm/cmake/occt_csf.cmake | [ Diff ] [ File ] | ||
mod - adm/genproj.tcl | [ Diff ] [ File ] | ||
mod - adm/UDLIST | [ Diff ] [ File ] | ||
mod - src/AIS/AIS_Animation.cxx | [ Diff ] [ File ] | ||
mod - src/AIS/AIS_Animation.hxx | [ Diff ] [ File ] | ||
mod - src/AIS/AIS_AnimationTimer.hxx | [ Diff ] [ File ] | ||
add - src/AIS/AIS_MediaPlayer.cxx | [ Diff ] [ File ] | ||
add - src/AIS/AIS_MediaPlayer.hxx | [ Diff ] [ File ] | ||
mod - src/AIS/FILES | [ Diff ] [ File ] | ||
mod - src/Graphic3d/FILES | [ Diff ] [ File ] | ||
add - src/Graphic3d/Graphic3d_MediaTexture.cxx | [ Diff ] [ File ] | ||
add - src/Graphic3d/Graphic3d_MediaTexture.hxx | [ Diff ] [ File ] | ||
add - src/Graphic3d/Graphic3d_MediaTextureSet.cxx | [ Diff ] [ File ] | ||
add - src/Graphic3d/Graphic3d_MediaTextureSet.hxx | [ Diff ] [ File ] | ||
mod - src/Image/Image_VideoRecorder.cxx | [ Diff ] [ File ] | ||
add - src/Media/FILES | [ Diff ] [ File ] | ||
add - src/Media/Media_BufferPool.cxx | [ Diff ] [ File ] | ||
add - src/Media/Media_BufferPool.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_CodecContext.cxx | [ Diff ] [ File ] | ||
add - src/Media/Media_CodecContext.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_FormatContext.cxx | [ Diff ] [ File ] | ||
add - src/Media/Media_FormatContext.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_Frame.cxx | [ Diff ] [ File ] | ||
add - src/Media/Media_Frame.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_IFrameQueue.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_Packet.cxx | [ Diff ] [ File ] | ||
add - src/Media/Media_Packet.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_PlayerContext.cxx | [ Diff ] [ File ] | ||
add - src/Media/Media_PlayerContext.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_Scaler.cxx | [ Diff ] [ File ] | ||
add - src/Media/Media_Scaler.hxx | [ Diff ] [ File ] | ||
add - src/Media/Media_Timer.hxx | [ Diff ] [ File ] | ||
mod - src/TKService/EXTERNLIB | [ Diff ] [ File ] | ||
mod - src/TKService/PACKAGES | [ Diff ] [ File ] | ||
mod - src/ViewerTest/ViewerTest.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-03-27 22:42 | kgv | New Issue | |
2019-03-27 22:42 | kgv | Assigned To | => kgv |
2019-03-27 22:42 | kgv | Summary | Visualization - provide texture map based on video => Visualization - provide texture map with video as image source |
2019-03-28 01:03 | git | Note Added: 0083271 | |
2019-03-28 01:48 | git | Note Added: 0083272 | |
2019-03-28 02:03 | git | Note Added: 0083273 | |
2019-03-28 07:42 | git | Note Added: 0083274 | |
2019-03-28 07:49 | git | Note Added: 0083276 | |
2019-03-28 18:42 | git | Note Added: 0083283 | |
2019-03-28 18:52 | git | Note Added: 0083284 | |
2019-03-30 15:50 | git | Note Added: 0083314 | |
2019-03-30 16:28 | git | Note Added: 0083316 | |
2019-03-30 16:29 | git | Note Added: 0083317 | |
2019-03-30 16:31 | kgv | Steps to Reproduce Updated | View Revisions |
2019-03-30 17:05 | git | Note Added: 0083318 | |
2019-03-30 20:08 | kgv | Note Added: 0083321 | |
2019-03-30 20:08 | kgv | Assigned To | kgv => osa |
2019-03-30 20:08 | kgv | Status | new => resolved |
2019-04-01 01:34 | kgv | Note Edited: 0083321 | View Revisions |
2019-04-05 10:39 | osa | Note Added: 0083427 | |
2019-04-05 10:39 | osa | Assigned To | osa => bugmaster |
2019-04-05 10:39 | osa | Status | resolved => reviewed |
2019-04-05 12:02 | apn | Test case number | => Not needed |
2019-04-05 12:02 | apn | Note Added: 0083429 | |
2019-04-05 12:02 | apn | Status | reviewed => tested |
2019-04-08 01:00 | apn | Note Added: 0083467 | |
2019-04-08 01:01 | apn | Note Edited: 0083467 | View Revisions |
2019-04-08 01:02 | apn | Assigned To | bugmaster => kgv |
2019-04-08 01:02 | apn | Status | tested => assigned |
2019-04-08 10:13 | git | Note Added: 0083471 | |
2019-04-08 10:46 | kgv | Note Added: 0083473 | |
2019-04-08 10:46 | kgv | Assigned To | kgv => bugmaster |
2019-04-08 10:46 | kgv | Status | assigned => resolved |
2019-04-08 10:46 | kgv | Status | resolved => reviewed |
2019-04-09 12:31 | apn | Note Added: 0083559 | |
2019-04-09 12:32 | apn | Note Edited: 0083559 | View Revisions |
2019-04-09 12:32 | apn | Assigned To | bugmaster => kgv |
2019-04-09 12:32 | apn | Status | reviewed => assigned |
2019-04-09 13:27 | git | Note Added: 0083568 | |
2019-04-09 13:29 | kgv | Note Added: 0083569 | |
2019-04-09 13:29 | kgv | Assigned To | kgv => bugmaster |
2019-04-09 13:29 | kgv | Status | assigned => resolved |
2019-04-09 13:29 | kgv | Status | resolved => reviewed |
2019-04-10 15:14 | apn | Status | reviewed => tested |
2019-04-14 15:36 | apn | Changeset attached | => occt master 98e6c6d1 |
2019-04-14 15:36 | apn | Assigned To | bugmaster => apn |
2019-04-14 15:36 | apn | Status | tested => verified |
2019-04-14 15:36 | apn | Resolution | open => fixed |
2019-04-14 15:41 | git | Note Added: 0083713 |
Copyright © 2000 - 2021 MantisBT Team |